test/regress/covC-amount-decimal-comma-err2.test
; Test incorrect use of decimal comma
; Covers amount.cc line 1223 (decimal comma with period present)
; When decimal_comma_style is already active and the amount has both
; a period and a comma in a conflicting arrangement
commodity 1,00 EUR

2024/01/01 Test
    Expenses:Food    1,234.56 EUR
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 8:
While parsing posting:
  Expenses:Food    1,234.56 EUR
                   ^^^^^^^^^^^^
Error: Incorrect use of decimal comma
end test
